--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
+    <header>
+     <div id="logo" >
+        <h1>STUDIEPROJEKT</h1>
+     </div>
+     <nav>
+        <ul>
+       <li><a href="">HTML CSS</a></li>
+       <li><a href="projekt1.html">Java script</a></li>
+       <li><a href="">Bootstrapts and Ui frameworks</a></li>
+        </ul>
+     </nav>
+
+    </header>
     
 </body>
 </html>
