--- a/projekt1.html
+++ b/projekt1.html
@@ -7,6 +7,17 @@
     <title>projekt1</title>
 </head>
 <body>
+    <header>
+        <div id="logo" >
+           <h1>STUDIEPROJEKT</h1>
+        </div>
+        <nav>
+           <ul>
+          <li><a href="index.html">HTML CSS</a></li>
+          <li><a href="projekt1.html">Java script</a></li>
+          <li><a href="">Bootstrapts and Ui frameworks</a></li>
+           </ul>
+        </nav>
     
 </body>
 </html>
