--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,8 +24,18 @@
             </div>
 
         </div>
-
+         
         <button type= “button” class="btn btn-primary">Click this button!</button>
-    
+    <h2>bootstrap modifies</h2>
+        <div class="alert alert-primary" role="alert">primary alert</div>
+        <div class="alert alert-danger" role="alert">alert-danger alert</div>
+        <div class="alert alert-info" role="alert">alert-info alert</div>
+        <div class="alert alert-dark" role="alert">alert-dark </div>
+        <div class="alert alert-light" role="alert">alert-light</div>
+<div class="alert alert-info" role="alert">alert-info</div>
+<div class="alert alert-warning" role="alert">warning alert</div>
+</body>
+</body>
+</body>
 </body>
 </html>
