--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,20 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
 
-        <div class="container">
-            <div class="row">
-               <div class="col">
-                  <h1>Our menu</h1>
-                  <h2>falafel</h2>
-                  <p>Chickpea, herbs and spices</p>
-               </div>
-               <div class="col">
-                <h1>Prices</h1>
-            </div>
-
-        </div>
-         
-        <button type= “button” class="btn btn-primary">Click this button!</button>
+ <button type= “button” class="btn btn-primary">Click this button!</button>
     <h2>bootstrap modifies</h2>
         <div class="alert alert-primary" role="alert">primary alert</div>
         <div class="alert alert-danger" role="alert">alert-danger alert</div>
@@ -34,8 +21,35 @@
         <div class="alert alert-light" role="alert">alert-light</div>
 <div class="alert alert-info" role="alert">alert-info</div>
 <div class="alert alert-warning" role="alert">warning alert</div>
+
+<div class="container">
+    <div class="row">
+       <div class="col-12 col-lg-6">
+          <h1>Our menu</h1>
+          <h2>Chicken burger</h2>
+          <p>Chicken, lettuce, mayo</p>
+          <img src="/chicken.jpg" class="img-fluid">
+          <h2>Breakfast Burger</h2>
+          <p>Beef, egg, bacon, tomato, mayo</p>
+           <img src="/breakfast.jpg" class="img-fluid">
+        </div>
+       <div class="col-12 col-lg-6">
+        <h1>Prices</h1>
+        <table class="table">
+           <tr>
+             <td>Chicken burger</td>
+             <td>$12.00</td>
+           </tr>
+           <tr>
+            <td>Breakfast Burger</td>
+            <td>$10.00</td>
+           </tr>
+
+        </table>
+    </div>
+
+</div>
+
 </body>
-</body>
-</body>
-</body>
+
 </html>
